--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 spring.application.name=CalenderApp
+
+# --- Database (dev default: H2 in-memory) ---
+spring.datasource.url=jdbc:h2:mem:calender;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+spring.h2.console.enabled=true
+
+# --- Kafka (optional in dev) ---
+spring.kafka.bootstrap-servers=localhost:9092
+app.kafka.topic.calendar=calendar.events
+app.kafka.topic.notification=calendar.notifications
+
+# --- Redis cache (optional in dev) ---
+app.redis.host=localhost
+app.redis.port=6379
+
+# --- JWT ---
+# Must be 32+ chars for HS256.
+app.jwt.secret=change-me-to-a-long-32+-char-secret-value-please
+app.jwt.expirationSeconds=3600
