--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=CalenderApp
 
-# --- Database (dev default: H2 in-memory) ---
-spring.datasource.url=jdbc:h2:mem:calender;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
+# --- Database (dev default: H2 file, persists across restarts) ---
+# Stored under backend/data/ (created automatically)
+spring.datasource.url=jdbc:h2:file:./data/calender;AUTO_SERVER=TRUE;MODE=PostgreSQL
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
